Add Orthophos page description. Fix #109

--- a/haitidata/static/less/haitidata.less
+++ b/haitidata/static/less/haitidata.less
@@ -1100,6 +1100,19 @@ nav.filter {
 		width: 100%;
 	}
 }
+
+/* Tutorials
+----------------------- */
+span#overview, span#filters, span#clip,
+span#share, span#odk, span#styling,
+span#graphs, span#maps, span#users,
+span#rancher {
+	display: block;
+	position: relative;
+	top: -76px;
+	visibility: hidden;
+}
+
 /* Upload Layers
 ----------------------- */
 #drop-zone {
