--- a/haitidata/templates/tutorials.html
+++ b/haitidata/templates/tutorials.html
@@ -20,30 +20,35 @@
         <p class="lead">{% trans "Cette page contient une série de tutoriels pour illustrer les principales caractéristiques de HaitiData" %}.</p>
       </div>
       <div class="col-md-6">
+        <span id="overview"></span>
         <h2>{% trans "Présentation de la plateforme" %}</h2>
         <p>{% trans "Aperçu de toutes les principales fonctionnalités de HaitiData" %}.</p>
         <div class="embed-responsive embed-responsive-16by9">
           <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/VvAEUH_gaes" frameborder="0" allowfullscreen></iframe>
         </div>
         <hr>
+        <span id="filters"></span>
         <h2>{% trans "Filtres de recherche" %}</h2>
         <p>{% trans "Illustration des principaux critères de filtrage pour une leur utilisation optimale" %}.</p>
         <div class="embed-responsive embed-responsive-16by9">
           <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/_0ya71tJnWY" frameborder="0" allowfullscreen></iframe>
         </div>
         <hr>
+        <span id="clip"></span>
         <h2>{% trans "Couper et Livrer" %}</h2>
         <p>{% trans "Instructions étape par étape pour télécharger une partie de l’orthophoto ou du MNT" %}.</p>
         <div class="embed-responsive embed-responsive-16by9">
           <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/6pcCoOYe0uY" frameborder="0" allowfullscreen></iframe>
         </div>
         <hr>
+        <span id="share"></span>
         <h2>{% trans "Partager couches et métadonnées" %}</h2>
         <p>{% trans "Comment gérer les privilèges d'accès et utiliser divers objets dans HaitiData" %}.</p>
         <div class="embed-responsive embed-responsive-16by9">
           <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/xku8-K995_M" frameborder="0" allowfullscreen></iframe>
         </div>
         <hr>
+        <span id="odk"></span>
         <h2>{% trans "Téléchargement de fichiers depuis Android ODK" %}</h2>
         <p>{% trans "Procédure de chargement et de transformation des fichiers ODK en couche ponctuelle." %}</p>
         <div class="embed-responsive embed-responsive-16by9">
@@ -51,30 +56,35 @@
         </div>
       </div>
       <div class="col-md-6">
+        <span id="styling"></span>
         <h2>{% trans "Symboliser les couches" %}</h2>
         <p>{% trans "Instructions pour changer le style de représentation d’une couche." %}</p>
         <div class="embed-responsive embed-responsive-16by9">
           <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/H14DMxuv-VI" frameborder="0" allowfullscreen></iframe>
         </div>
         <hr>
+        <span id="graphs"></span>
         <h2>{% trans "Graphiques" %}</h2>
         <p>{% trans "Comment créer des graphiques à partir d’une couche vectorielle." %}</p>
         <div class="embed-responsive embed-responsive-16by9">
           <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/BkQANF6DNhg" frameborder="0" allowfullscreen></iframe>
         </div>
         <hr>
+        <span id="maps"></span>
         <h2>{% trans "Créer des cartes" %}</h2>
         <p>{% trans "Procédure de création d’une carte et de gestion des ses métadonnées et privilèges." %}</p>
         <div class="embed-responsive embed-responsive-16by9">
           <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/ajOUe7HUgUY" frameborder="0" allowfullscreen></iframe>
         </div>
         <hr>
+        <span id="users"></span>
         <h2>{% trans "Gestion des utilisateurs" %}</h2>
         <p>{% trans "Comment gérer les utilisateurs, les groupes et les privilèges." %}</p>
         <div class="embed-responsive embed-responsive-16by9">
           <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/oVcDq1jHeNA" frameborder="0" allowfullscreen></iframe>
         </div>
         <hr>
+        <span id="rancher"></span>
         <h2>{% trans "Rancher" %}</h2>
         <p>{% trans "La géstion de Rancher." %}</p>
       </div>
