--- a/django_project/core/templates/site_base.html
+++ b/django_project/core/templates/site_base.html
@@ -60,7 +60,7 @@
             <li role="separator" class="divider"></li>
             <li><a href="{% url "layer_upload" %}">{% trans "Upload Layer" %}</a></li>
             <li><a href="/uploads/new">{% trans "Upload ODK exports" %}</a></li>
-            <li><a href="{% url "document_upload" %}">Upload Document</a></li>
+            <li><a href="{% url "document_upload" %}">{% trans "Upload Document" %}</a></li>
             <li><a href="{% url "register_service" %}">{% trans "Add Remote Service" %}</a></li>
             {% endif %}
           </ul>
@@ -89,6 +89,7 @@
               <li><a href="{% url "profile_browse" %}">{% trans "People" %}</a></li>
               <li><a href="{% url "group_list" %}">{% trans "Groups" %}</a></li>
               <li><a href="{% url "tutorials" %}">{% trans "Tutorials" %}</a></li>
+              <li><a href="{% url "contact" %}">{% trans "Contact Us" %}</a></li>
               {% if perms.announcements.can_manage %}
               <li><a href="{% url "announcements_list" %}">{% trans "Announcements" %}</a></li>
               {% endif %}
@@ -169,3 +170,78 @@
   	{% endblock %}
   </div>
   {% endblock middle %}
+
+
+  {% block footer %}
+    <footer>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-2 col-sm-6">
+            <ul class="list-unstyled">
+              <li>{% trans "Data" %}</li>
+              <li><a href="{% url "layer_browse" %}">{% trans "Layers" %}</a></li>
+              <li><a href="{% url "document_browse" %}">{% trans "Documents" %}</a></li>
+              <li><a href="{% url "chart_list" %}">{% trans "Graphs" %}</a></li>
+              {% if user.is_authenticated %}
+              <li><a href="/uploads">{% trans "Uploads" %}</a></li>
+              <li><a href="{% url "services" %}">{% trans "Remote Services" %}</a></li>
+              <li role="separator" class="divider"></li>
+              <li><a href="{% url "layer_upload" %}">{% trans "Upload Layer" %}</a></li>
+              <li><a href="/uploads/new">{% trans "Upload ODK exports" %}</a></li>
+              <li><a href="{% url "document_upload" %}">{% trans "Upload Document" %}</a></li>
+              <li><a href="{% url "register_service" %}">{% trans "Add Remote Service" %}</a></li>
+              {% endif %}
+            </ul>
+          </div>
+          <div class="col-md-2 col-sm-6">
+            <ul class="list-unstyled">
+              <li>{% trans "Maps" %}</li>
+              <li><a href="{% url "maps_browse" %}">{% trans "Explore Maps" %}</a></li>
+              {% if user.is_authenticated %}
+              <li> <a href="{% url "new_map" %}">{% trans "Create Map" %}</a></li>
+              {% endif %}
+            </ul>
+            <ul class="list-unstyled">
+              <li>{% trans "Imagery" %}</li>
+              <li><a href="/clip/ortho_images">{% trans "Orthophotos" %}</a></li>
+              <li> <a href="/clip/lidar">{% trans "DSM" %}</a></li>
+          </div>
+  		    <div class="col-md-2 col-sm-6">
+            <ul class="list-unstyled">
+              <li>{% trans "About" %}</li>
+              <li><a href="{% url "profile_browse" %}">{% trans "People" %}</a></li>
+              <li><a href="{% url "group_list" %}">{% trans "Groups" %}</a></li>
+              {% if perms.announcements.can_manage %}
+              <li><a href="{% url "announcements_list" %}">{% trans "Announcements" %}</a></li>
+              {% endif %}
+              {% if user.is_superuser %}
+              <li><a href="/admin/people/profile/add/">{% trans "Add User" %}</a></li>
+              <li><a href="{% url "account_invite_user" %}">{% trans "Invite User" %}</a></li>
+              <li><a href="{% url "group_create" %}">{% trans "Create Group" %}</a></li>
+              {% endif %}
+            </ul>
+          </div>
+          <div class="col-md-6 text-right">
+            <ul class="list-unstyled">
+              <li>{% trans "Powered by" %} <a href="http://geonode.org">{% trans "GeoNode" %}</a> <em>{% trans "version" %} {{ VERSION }}</em></li>
+              <li><a href="{% url "developer" %}">{% trans "Developers" %}</a> | <a href="{% url "about" %}">{% trans "About" %}</a><li>
+            </ul>
+            <label class="hidden">{% trans "Language" %}</label>
+            {% if csrf_token != "NOTPROVIDED" %}
+            {% get_current_language as LANGUAGE %}
+            <form class="form-inline" action="/i18n/setlang/" method="post">
+            {% csrf_token %}
+              <select class="col-md-6 pull-right" name="language" onchange="javascript:form.submit()">
+                {% for lang in LANGUAGES %}
+                <option value="{{ lang.0 }}" {% ifequal LANGUAGE_CODE lang.0 %} selected="selected"{% endifequal %}>
+                  {{ lang.1 }}
+                </option>
+                {% endfor %}
+              </select>
+            </form>
+            {% endif %}
+          </div>
+        </div>
+      </div>
+    </footer>
+    {% endblock footer %}
