Add translations in home page. Fix #123

--- a/haitidata/templates/site_index.html
+++ b/haitidata/templates/site_index.html
@@ -7,10 +7,10 @@
 <div class="jumbotron">
   <div class="container">
     <h1>Haiti<span style="font-weight:200">Data</span></h1>
-    <p>{% blocktrans %}HaitiData est une plate-forme conçue pour diffuser, partager et exploiter des données SIG et cartographiques sur Haïti. Une idée qui a vu le jour après le tremblement de terre du 12 janvier 2010 et dont la version initiale a été utilisée par plusieurs acteurs et partenaires engagés dans la gestion des risques et désastres, la planification urbaine, l’agriculture et la sécurité alimentaire, l’aménagement du territoire, la gestion de l’environnement, les infrastructures, les statistiques, le tourisme, la cartographie topographique, la cartographie thématique, etc.</p>
-    <p>Le CNIGS, en tant qu’agence nationale ayant pour mission officielle de collecter et diffuser des données spatialisées en Haïti (et principale entité étatique en termes de capacités en SIG), est donc chargé de la direction technique de la plate-forme.</p>
-    <p>Les données hébergées sur HaitiData sont accessibles au grand public et doivent contribuer à plus de synergies et une collaboration plus étroite entre les Ministères, les ONGs, la communauté internationale, les universités et le secteur privé.</p>
-    <p>HaitiData.org est basé sur la plateforme de GeoNode qui est une plateforme géo-spatiale open-source et un outil de technologie Web.{% endblocktrans %}</p>
+    <p>{% blocktrans %}HaitiData is a platform designed to disseminate, share and exploit GIS and cartographic data about Haiti. This idea was born after the earthquake of January 12, 2010. The first version of HaitiData has been used by several actors and partners involved in risk and disaster management, urban planning, agriculture and food security, spatial planning, environmental management, infrastructure, statistics, tourism, topographic mapping, thematic mapping, etc.{% endblocktrans %}</p>
+    <p>{% blocktrans %}CNIGS, as the national agency whose official mission is to collect and disseminate spatial data in Haiti (and the main governmental agency in terms of GIS capabilities), is therefore in charge of the platform.{% endblocktrans %}</p>
+    <p>{% blocktrans %}The data hosted on HaitiData is accessible to the general public and improves exchange and collaboration between Ministries, NGOs, the international community, academia and the private sector.{% endblocktrans %}</p>
+    <p>{% blocktrans %}HaitiData.org is based on GeoNode which is an open source geospatial platform and a web technology tool.{% endblocktrans %}</p>
   </div>
 </div>
 {% endblock %}
@@ -64,16 +64,16 @@
     <div class="row">
       <div class="col-md-4">
         <h1>{% blocktrans %}Imagery{% endblocktrans %}</h1>
-        <p>{% blocktrans %}Cette section est un raccourci pour l'accès aux images aériennes et aux modèles numériques du terrain. Ces pages dédiées permettent de télécharger un sous-ensemble de ces données raster, extrait à partir de polygones dessinés directement sur la couche image.{% endblocktrans %}</p>
+        <p>{% blocktrans %}This section is a shortcut for access to aerial images and digital terrain models. These dedicated pages allow you to download a subset of these raster data, defined by drawing polygons on the same layer.{% endblocktrans %}</p>
       </div>
       <div class="col-md-4">
         <h3>{% blocktrans %}Aerial images{% endblocktrans %}</h3>
-        <p>{% blocktrans %}Couverture aérienne à résolution spatiale de 25 cm. La mosaïque est composée de 3617 jeux de données.{% endblocktrans %}</p>
+        <p>{% blocktrans %}It is an aerial coverage at a spatial resolution of 25 cm. The mosaic is composed of 3617 datasets.{% endblocktrans %}</p>
         <a class="btn btn-default" href="/clip/Haiti25cm-PaP-extract" role="button">{% blocktrans %}Aerial images{% endblocktrans %}</a>
       </div>
       <div class="col-md-4">
         <h3>{% blocktrans %}DSM/DTM{% endblocktrans %}</h3>
-        <p>{% blocktrans %}Le Modèle Numérique de Terrain a été produit par un vol LiDAR et avec une résolution spatiale de 1.5 m. Le mosaïque est composé de 1873 jeux de données.{% endblocktrans %}</p>
+        <p>{% blocktrans %}This is a numerical surface model derived from a LiDAR flight and with a spatial resolution of 1.5 m. The mosaic is composed by 1873 datasets.{% endblocktrans %}</p>
         <a class="btn btn-default" href="/clip/lidar" role="button">{% blocktrans %}DSM/DTM{% endblocktrans %}</a>
       </div>
     </div>
