--- a/django_project/core/templates/clip-and-ship/clip-page.html
+++ b/django_project/core/templates/clip-and-ship/clip-page.html
@@ -35,7 +35,7 @@
     </article>
   </div>
 </div>
-<div id="download-clip-error-message" class="label label-danger" style="margin-bottom: 50px; display: none">Error message</div>
+<div id="download-clip-error-message" class="label label-danger" style="margin-bottom: 50px; display: none; font-size: 2em">Error message</div>
 <div id="download-clip-map"></div>
 
 <button type="button" class="btn btn-primary btn-md btn-block" data-toggle="modal" data-target="#download_clip_page" id="download-clip-button">{% trans "Download Clip" %}</button>
