--- a/django_project/core/templates/clip-and-ship/download-clip.html
+++ b/django_project/core/templates/clip-and-ship/download-clip.html
@@ -44,7 +44,7 @@
                     allowIntersection: false,
                     drawError: {
                         color: '#e1e100',
-                        message: '<strong>You can\'t draw that!</strong>'
+                        message: '<strong>Vous ne pouvez pas dessiner ça! - You can\'t draw that!</strong>'
                     },
                     shapeOptions: {
                         color: '#bada55'
