--- a/django_project/core/templates/tutorials.html
+++ b/django_project/core/templates/tutorials.html
@@ -87,6 +87,9 @@
         <span id="rancher"></span>
         <h2>{% trans "Rancher" %}</h2>
         <p>{% trans "La géstion de Rancher." %}</p>
+        <div class="embed-responsive embed-responsive-16by9">
+          <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/ggTGMoZb74M" frameborder="0" allowfullscreen></iframe>
+        </div>
       </div>
     </div>
   </div>
