--- a/django_project/core/templates/tutorials.html
+++ b/django_project/core/templates/tutorials.html
@@ -86,7 +86,7 @@
         <hr>
         <span id="rancher"></span>
         <h2>{% trans "Rancher" %}</h2>
-        <p>{% trans "La géstion de Rancher." %}</p>
+        <p>{% trans "La gestion avec Rancher." %}</p>
         <div class="embed-responsive embed-responsive-16by9">
           <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/ggTGMoZb74M" frameborder="0" allowfullscreen></iframe>
         </div>
