--- a/django_project/core/templates/site_base.html
+++ b/django_project/core/templates/site_base.html
@@ -79,8 +79,8 @@
           <li id="nav_imagery">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{% trans "Imagery" %}<i class="fa fa-angle-down fa-lg"></i></a>
               <ul class="dropdown-menu">
-                <li><a href="/clip/ortho_images">{% trans "Orthophotos" %}</a></li>
-                <li> <a href="/clip/lidar">{% trans "DSM" %}</a></li>
+                <li><a href="/clip/ortho_images_pyramid">{% trans "Orthophotos" %}</a></li>
+                <li> <a href="/clip/lidar_dem_mosaic">{% trans "DSM" %}</a></li>
               </ul>
             </li>
           <li>
